# chamkho-pg

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-japanese-chinese-dict  LICENSE-pgrx  LICENSE-shan  README.md  README.org  build.rs  chamkho_parser.control  config.toml  install.sh  wrapper.h
.github/workflows/: docker-publish.yml
control/: chamkho_parser.control
data/: dix.txt
scripts/: init.sh
scripts/hooks/: pre-commit
sql/: chamkho_parser--1.0.sql  chamkho_parser--unpackaged--1.0.sql  exper.sql
src/: lib.rs
tests/pg_regress/sql/: setup.sql
