[package]
name = "chamkho-pg"
version = "0.3.0"
authors = ["Vee Satayamas <vsatayamas@gmail.com>"]
edition = "2021"
build = "build.rs"
rust-version = "1.77.2"
description = "A PostgreSQL extension, which its objective is enabling PostgreSQL full-text searching on SE Asian languages"
license = "GPLv2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chamkho_parser"
crate-type = ["cdylib"]

[[bin]]
name = "adding-stmt"
path = "src/bin.rs"

[dependencies]
lazy_static = "1.4.0"
wordcut-engine = { git = "https://codeberg.org/mekong-lang/wordcut-engine.git" }
regex = "1"
cfg-if = "1.0.0"

[build-dependencies]
bindgen = "0.69.4"