[package]
name = "chamkho-pg"
version = "0.6.0"
authors = ["Vee Satayamas <vsatayamas@gmail.com>"]
edition = "2021"
rust-version = "1.96.0"
description = "A PostgreSQL extension, which its objective is enabling PostgreSQL full-text searching on SE Asian languages"
license = "GPLv2"

[lib]
name = "chamkho_parser"
crate-type = ["cdylib"]

[features]
default = ["pg18"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
pgrx = "=0.18.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
regex = "1"
wordcut-engine = { git = "https://codeberg.org/mekong-lang/wordcut-engine.git", tag = "v1.2.1" }

[dependencies.pgrx-bench]
version = "=0.18.0"
optional = true

[dev-dependencies]
[dev-dependencies.pgrx-tests]
version = "=0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
